2005-01-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-find-el): Check carefully whether there's a list
	of string which old xml.el may return rather than a string.

2005-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-idna-message): Silence byte compiler.

2005-01-16  Simon Josefsson  <jas@extundo.com>

	* gnus-sum.el (gnus-summary-idna-message): Fail gracefully if
	idn/idna.el isn't available.
	(gnus-summary-idna-message): Doc fix.  Suggested by Michael Cook
	<michael@waxrat.com>.

	* hashcash.el: Remove non-FSF copyright header.

	* hashcash.el (hashcash-extra-generate-parameters): New variable.
	(hashcash-generate-payment): Use it.
	(hashcash-generate-payment-async): Use it.

2005-01-15  Simon Josefsson  <jas@extundo.com>

	* message.el (message-idna-to-ascii-rhs): Decode Reply-To too.
	Suggested by Raymond Scholz <ray-2005@zonix.de>.

	* gnus-sum.el (gnus-summary-wash-map): Bind "W i" to
	gnus-summary-idna-message.
	(gnus-summary-make-menu-bar): Add De-IDNA menu entry.
	(gnus-summary-idna-message): New function.

2005-01-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-msg.el (gnus-confirm-mail-reply-to-news): Change default to
	gnus-novice-user.

2005-01-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-request-delete-group): Delete entries in
	nnrss-group-alist as well.
	(nnrss-save-server-data): Insert newline.

2005-01-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.el (gnus-user-agent): Use list of symbols instead of
	symbols.  Display full version number for (S)XEmacs.  Optionally
	display (S)XEmacs codename.

	* gnus-util.el (gnus-emacs-version): Update for new
	`gnus-user-agent'.

	* gnus-msg.el (gnus-extended-version): Make it possible to omit
	Gnus version.

2005-01-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam.el (spam-face): New face.  Don't use `gnus-splash-face'
	which is unreadable in some setups.

2005-01-06  Katsumi Yamaoka  <yamaoka@jpl.org>
